--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,13 @@
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "moduleResolution": "node",
+        "resolveJsonModule": true,
         "baseUrl": "./",
         "paths": {
-        "*": ["node_modules/*", "src/types/*"]
+            "*": [
+                "node_modules/*",
+                "src/types/*"
+            ]
         }
     },
     "include": [
