--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "axios": "^1.6.5",
     "canvas": "^2.11.2",
     "cheerio": "^1.0.0-rc.12",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "twitter-api-v2": "^1.16.0",
     "yt-search": "^2.10.4"
   }
