--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@types/jest": "^29.5.11",
     "@types/node": "^20.11.5",
     "@types/yt-search": "^2.10.3",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2"
