--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.6.5",
     "canvas": "^3.2.0",
     "cheerio": "^1.0.0-rc.12",
+    "discord.js": "^14.22.1",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "twitter-api-v2": "^1.16.0",
