modify deploy script to not build and use ts directly

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,5 +19,5 @@ jobs:
           cd ~/nhl-gamebot
           git pull origin master
           npm ci
-          npm run build
-          pm2 restart nhl-gamebot || pm2 start dist/index.js --name "nhl-gamebot"
+          pm2 restart nhl-gamebot || pm2 start npm --name "nhl-gamebot" -- run start
+          pm2 save
