--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^29.5.11",
+    "@types/mime-types": "^2.1.4",
     "@types/node": "^20.11.5",
     "@types/yt-search": "^2.10.3",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -32,6 +33,7 @@
     "canvas": "^3.2.0",
     "cheerio": "^1.0.0-rc.12",
     "discord.js": "^14.22.1",
+    "mime-types": "^3.0.1",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "twitter-api-v2": "^1.16.0",
