--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "tsx src/index.ts",
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "replay": "tsx scripts/replay.ts"
   },
   "author": "",
   "license": "ISC",
