--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/jest": "^29.5.11",
     "@types/mime-types": "^2.1.4",
     "@types/node": "^20.11.5",
+    "@types/node-telegram-bot-api": "^0.64.6",
     "@types/yt-search": "^2.10.3",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
@@ -37,6 +38,8 @@
     "mime-types": "^3.0.1",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
+    "node-telegram-bot-api": "^0.66.0",
+    "threads-api": "^1.4.2",
     "twitter-api-v2": "^1.16.0",
     "yt-search": "^2.10.4"
   }
