--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "node-telegram-bot-api": "^0.66.0",
-    "threads-api": "^1.4.2",
+    "threads-api": "latest",
     "twitter-api-v2": "^1.16.0",
     "yt-search": "^2.10.4"
   }
