--- a/config.template.json
+++ b/config.template.json
@@ -21,7 +21,8 @@
   "threads": {
     "username": "YOUR_INSTAGRAM_USERNAME",
     "password": "YOUR_INSTAGRAM_PASSWORD",
-    "isActive": true
+    "isActive": true,
+    "topic": "YOUR_TOPIC"
   },
   "telegram": {
     "botToken": "YOUR_TELEGRAM_BOT_TOKEN",
