--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,11 @@
                 "node_modules/*",
                 "src/types/*"
             ]
-        }
+        },
+      "typeRoots": [
+        "./src/types", "./node_modules/@types"],
     },
+
     "include": [
         "src/**/*.ts",
         "test/**/*.ts"
