--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/imagemin": "^9.0.1",
+    "@types/imagemin-gifsicle": "^7.0.4",
     "@types/jest": "^29.5.11",
     "@types/mime-types": "^2.1.4",
     "@types/node": "^20.11.5",
@@ -36,6 +38,8 @@
     "cheerio": "^1.0.0-rc.12",
     "discord.js": "^14.22.1",
     "gif-encoder-2": "^1.0.5",
+    "imagemin": "^9.0.1",
+    "imagemin-gifsicle": "^7.0.0",
     "mime-types": "^3.0.1",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
