--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
   },
   "dependencies": {
     "@atproto/api": "^0.16.9",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@types/fluent-ffmpeg": "^2.1.28",
     "axios": "^1.6.5",
     "canvas": "^3.2.0",
     "cheerio": "^1.0.0-rc.12",
     "discord.js": "^14.22.1",
+    "fluent-ffmpeg": "^2.1.3",
     "gif-encoder-2": "^1.0.5",
     "imagemin": "^9.0.1",
     "imagemin-gifsicle": "^7.0.0",
