--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@types/fluent-ffmpeg": "^2.1.28",
     "axios": "^1.6.5",
-    "canvas": "^3.2.0",
+    "canvas": "3.2.0",
     "cheerio": "^1.0.0-rc.12",
     "discord.js": "^14.22.1",
     "fluent-ffmpeg": "^2.1.3",
